--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,7 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
-    [
-      "@babel/plugin-proposal-class-properties",
-      {"loose": true}
-    ],
-    "@babel/plugin-transform-runtime"
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    ["@babel/plugin-transform-runtime", { "regenerator": true }]
   ]
 }
