--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@babel/core": "7.5.5",
     "@babel/plugin-proposal-class-properties": "7.10.1",
+    "@babel/plugin-transform-runtime": "^7.25.4",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.7.0",
     "babel-loader": "8.2.5",
@@ -17,12 +18,13 @@
     "webpack-dev-server": "4.9.0"
   },
   "dependencies": {
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "@babel/runtime": "^7.25.6",
+    "proptypes": "1.1.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "7.2.1",
     "react-router-dom": "^6.3.0",
     "redux": "^4.0.5",
-    "react-redux": "7.2.1",
-    "proptypes": "1.1.0",
     "redux-thunk": "2.3.0"
   }
 }
